@@ -17,6 +17,11 @@
   </properties>
 
   <dependencies>
+      <dependency>
+          <groupId>com.github.f4b6a3</groupId>
+          <artifactId>uuid-creator</artifactId>
+          <version>5.3.7</version>
+      </dependency>
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
@@ -62,6 +67,9 @@
         <version>0.0.8</version>
         <configuration>
           <mainClass>ca.ucalgary.seng300.app.MainApp</mainClass>
+          <options>
+            <option>--enable-native-access=javafx.graphics</option>
+          </options>
         </configuration>
       </plugin>
 
